--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,17 @@
-== README
+== Latted.me
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+*What* *is* *it?*
 
-Things you may want to cover:
+-Latted is social movie platform.
 
-* Ruby version
+*What* *does* *it* *do?*
 
-* System dependencies
+-Movie recommendations based on your watched history and people that you are following(we call it _latted_). 
 
-* Configuration
+*How* *its* *made?*
 
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* with love and Rails 4
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+
+
